# genetic-programming

./: .coverage  .gitignore  Makefile  pyproject.toml
.github/workflows/: pull-request.yaml
data/: serialized_individual
example_programs/: example_1
src/: driver.py  example.txt  grammar.py  individual.py  interpreter_driver.py  nodes.py  presentation.ipynb  tournament.py
src/antlr/: Krecik.g4  Language.g4  Language.interp  Language.tokens  LanguageLexer.interp  LanguageLexer.py  LanguageLexer.tokens  LanguageListener.py  LanguageParser.py  LanguageVisitor.py  Logo3D.g4
src/antlr/example_grammars/: C.g4  Logo3D.g4
src/benchmarks/final/: boolean_regression.py  for_loop_index.py  sum_of_squares.py
src/benchmarks/final/results/: boolean_regression
src/benchmarks/final/test_results/: sum_of_squares
src/benchmarks/tasks/: task_1.1.A.py  task_1.1.B.py  task_1.1.C.py  task_1.1.D.py  task_1.1.E.py  task_1.1.F.py  task_1.2.A.py  task_1.2.B.py  task_1.2.C.py  task_1.2.D.py  task_1.2.E.py  task_1.3.A.py  task_1.3.B.py  task_1.4.A.py  task_1.4.B.py  tasks.ipynb
src/benchmarks/tasks/results/: 1.1.B  1.1.C  1.1.D  1.1.E  1.1.F  1.2.B  1.2.C  1.2.D  1.2.E  1.3.B
src/benchmarks/tasks/test_results/: 1.1.B  1.1.C  1.2.B  boolean_regression
src/example_programs/: example_1  example_1.krecik  indiv  indiv_1  individual
src/final_tests/: boolean_regression.py  for_loop_index.py  sum_of_squares.py
src/final_tests/test_results/: boolean_regression  for_loop_index
src/gp_algorithm/: builder.py  genetic_algorithm.py  grammar.py  individual.py  node.py  nodes.py  tournament.py  tree_config.py  utils.py
src/gp_algorithm/interpreter/: exceptions.py  expression.py  interpreter.py  parser.py  program_io.py  variable_stack.py  visitor.py
src/gp_algorithm/interpreter/language_types/: base_type.py  boolean.py  float.py  integer.py
src/interpreter/: decorators.py  driver.py  exceptions.py  interpreter.py  listener.py  parser.py  program_io.py  recognizers.py  variable_stack.py  visitor.py
src/interpreter/language_types/: base_type.py  boolean.py  float.py  integer.py
src/interpreter/types/: base_type.py  integer.py
src/interpreter/visitors/: expressions.py  main.py
src/nodes/: base.py  individual.py  statement.py
src/presentation/: driver.py
src/test_tasks/: tasks.ipynb
src/test_tasks/test_results/: 1.1.B  1.1.C  1.1.D  1.1.E  1.1.F  1.2.C  1.2.D  1.2.E  boolean_regression
src/tests/interpreter/: conftest.py  test_expressions_visitor.py  test_interpreter.py  test_visitor.py
src/tests/interpreter/inputs/: test  test_1
tests/gp_algorithm/: conftest.py  test_individual.py  test_nodes.py
tests/gp_algorithm/interpreter/: conftest.py  test_expressions_visitor.py  test_interpreter.py  test_visitor.py
tests/gp_algorithm/interpreter/inputs/: test_1  test_2  test_4
tests/inputs/: test_1  test_3  test_4  test_5  test_interpreter_2  test_interpreter_3
